# slider_state_estimation

./: .gitignore  CMakeLists.txt  package.xml
dev/sim/: SliderEnv.py  meshcat_viz.py  play_model.py  testing.ipynb
dev/sim/models/: slider_2_0.xml
dev/sim/models/urdf/: slider_2_0_urdf-transparent.urdf
envs/conda-meta/: history
firmware/imu-reader/: platformio.ini
firmware/imu-reader/src/: main.cpp
launch/: slider_state_estimation.launch.py
models/: flat_world.xml  slider_2_0.xml
models/urdf/: slider_2_0_urdf.urdf
scripts/: body_pose_estimator.py  imu_pub.py  imu_serial_test.py
system_identification/: bag_to_csv.ipynb  drake_multibody_test.ipynb  drake_multibody_test2.ipynb  drake_slider_test.ipynb  drake_test.ipynb  pendulum_system.py  stochastic_optimzer.py
system_identification/bags/rosbag2_2023_04_03-17_24_51/: metadata.yaml  rosbag2_2023_04_03-17_24_51_0.db3
system_identification/bags/rosbag2_2023_04_04-17_05_25/: metadata.yaml
system_identification/bags/rosbag2_2023_04_04-17_09_32/: metadata.yaml
system_identification/urdf/meshes/: 2022_Foot.mtl
system_identification/urdf/urdf/: slider_2_0_urdf.urdf
